[gd_scene load_steps=7 format=2]

[ext_resource path="res://Level/Glowberry/Glowberry.gd" type="Script" id=1]
[ext_resource path="res://Sprite/Glowberry/GlowberrySprite.tscn" type="PackedScene" id=2]
[ext_resource path="res://testlight2.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="Animation" id=2]
resource_name = "LightUp"
tracks/0/type = "value"
tracks/0/path = NodePath("Light2D:texture_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.267943, 0.241484 ),
"update": 0,
"values": [ 0.01, 0.25 ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Light2D:texture_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.01 ]
}

[node name="Glowberry" type="Node2D"]
script = ExtResource( 1 )

[node name="LightHurtbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="LightHurtbox"]
shape = SubResource( 1 )

[node name="ParryHurtbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="ParryHurtbox"]
shape = SubResource( 1 )

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 3 )
texture_scale = 0.01

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/LightUp = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="AnimatedSprite" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, 8 )

[connection signal="area_entered" from="LightHurtbox" to="." method="_on_LightHurtbox_area_entered"]
[connection signal="area_entered" from="ParryHurtbox" to="." method="_on_ParryHurtbox_area_entered"]
